some fixes for consumer
