# internal/handlers/order.go
@@ -2,12 +2,12 @@ package handlers
 
 import (
 	"L0/ent"
+	"L0/ent/order"
 	"L0/internal/storage/postgres"
 	"encoding/json"
 	"github.com/go-chi/chi/v5"
 	"log/slog"
 	"net/http"
-	"strconv"
 	"sync"
 )
 
@@ -18,19 +18,13 @@ type OrderHandler struct {
 }
 
 func (h *OrderHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
-	orderIDStr := chi.URLParam(r, "order_id")
-	if orderIDStr == "" {
-		http.Error(w, "order_id is required", http.StatusBadRequest)
+	orderUID := chi.URLParam(r, "order_uid")
+	if orderUID == "" {
+		http.Error(w, "order_uid is required", http.StatusBadRequest)
 		return
 	}
 
-	orderID, err := strconv.Atoi(orderIDStr)
-	if err != nil {
-		http.Error(w, "invalid order_id", http.StatusBadRequest)
-		return
-	}
-
-	cachedOrder, found := h.Cache.Load(orderID)
+	cachedOrder, found := h.Cache.Load(orderUID)
 	if found {
 		w.Header().Set("Content-Type", "application/json")
 		if err := json.NewEncoder(w).Encode(cachedOrder); err != nil {
@@ -41,7 +35,10 @@ func (h *OrderHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	}
 
 	ctx := r.Context()
-	order, err := h.Storage.Client.Order.Get(ctx, orderID)
+	foundOrder, err := h.Storage.Client.Order.
+		Query().
+		Where(order.OrderUIDEQ(orderUID)).
+		Only(ctx)
 	if err != nil {
 		if ent.IsNotFound(err) {
 			http.Error(w, "order not found", http.StatusNotFound)
@@ -52,10 +49,10 @@ func (h *OrderHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	h.Cache.Store(orderID, order)
+	h.Cache.Store(orderUID, foundOrder)
 
 	w.Header().Set("Content-Type", "application/json")
-	if err := json.NewEncoder(w).Encode(order); err != nil {
+	if err := json.NewEncoder(w).Encode(foundOrder); err != nil {
 		h.Logger.Error("failed to encode response", slog.String("error", err.Error()))
 		http.Error(w, "failed to encode response", http.StatusInternalServerError)
 	}
